updata:some codes about api
