# bang/handler/homepage.go
@@ -6,10 +6,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary "我的页面"
+// @Description "获取用户的基本信息"
+// @Tags homepage
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {object} model.UserInfo
+// @Failure 404 "验证失败"
+// @Failure 401 "没有查找到该用户的信息！"
+// @Router /user [get]
 func HomePage(c *gin.Context) {
 	//var UserInfo model.UserInfo
-	toekn := c.Request.Header.Get("token")
-	id, err := model.VerifyToken(toekn)
+	token := c.Request.Header.Get("token")
+	id, err := model.VerifyToken(token)
 	if err != nil {
 		c.JSON(404, gin.H{"meaasge": "验证失败！"})
 		return
@@ -17,12 +27,22 @@ func HomePage(c *gin.Context) {
 	//fmt.Println(id)
 	UserInfo, err1 := model.GetUserInfo(id)
 	if err1 != nil {
-		c.JSON(404, gin.H{"message": "没有查找到该用户的信息！"})
+		c.JSON(401, gin.H{"message": "没有查找到该用户的信息！"})
 		return
 	}
 	c.JSON(200, UserInfo)
 }
 
+// @Summary "我的发布"
+// @Description "查看我发布的招募信息"
+// @Tags homepage
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Success 200 {object} []model.Requirement
+// @Failure 404 "验证失败"
+// @Failure 401  "获取信息失败！"
+// @Router /user/myrelease [get]
 func MyRelease(c *gin.Context) {
 	token := c.Request.Header.Get("token")
 	id, err := model.VerifyToken(token)
@@ -32,7 +52,7 @@ func MyRelease(c *gin.Context) {
 	}
 	Requirement, err1 := model.GetMyRequire(id)
 	if err1 != nil {
-		c.JSON(404, gin.H{"message": "获取信息失败！"})
+		c.JSON(401, gin.H{"message": "获取信息失败！"})
 		return
 	}
 	c.JSON(200, Requirement)
@@ -47,12 +67,12 @@ func Mystore(c *gin.Context) {
 	}
 	RequireId, err1 := model.GetMyStoreId(id)
 	if err1 != nil {
-		c.JSON(404, gin.H{"message": "没有找到信息！"})
+		c.JSON(401, gin.H{"message": "没有找到信息！"})
 		return
 	}
 	RequireInfo, err2 := model.GetMyStore(RequireId)
 	if err2 != nil {
-		c.JSON(404, gin.H{"message": "没有获取到信息！"})
+		c.JSON(401, gin.H{"message": "没有获取到信息！"})
 		return
 	}
 	c.JSON(200, RequireInfo)
